--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,7 +179,8 @@ nav {
 	border: 2px solid transparent;
 }
 
-.layer-panel>div.active {
+.layer-panel>div:not(.layer-terrain).active,
+.layer-terrain.act {
 	border: 2px solid #46a5fc;
 }
 
@@ -204,6 +205,11 @@ nav {
 
 .layer-ls {
 	background: url(../../assets/img/example3.png) no-repeat center center / 100% 100%;
+}
+.layer-terrain {
+	width: 100%;
+	height: 100%;
+	background: url(../../assets/img/example4.png) no-repeat center center / 100% 100%;
 }
 
 /* pages style */
