--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,6 +206,7 @@ nav {
 .layer-ls {
 	background: url(../../assets/img/example3.png) no-repeat center center / 100% 100%;
 }
+
 .layer-terrain {
 	width: 100%;
 	height: 100%;
@@ -379,14 +380,14 @@ nav {
 /* slider */
 .bottom-panel {
 	width: 700px;
-	background-color: rgba(255, 255, 255, 0.4);
-	border-radius: 20px;
+	background-color: rgba(255, 255, 255, 1);
+	border-radius: 25px;
 	padding: 0 25px;
 	position: absolute;
-	bottom: 30px;
+	bottom: 10px;
 	left: 50%;
 	transform: translate(-50%, 0);
-	opacity: 0.5;
+	opacity: 0.15;
 	z-index: 1;
 }
 
@@ -851,4 +852,19 @@ nav {
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
+}
+
+.history-date {
+	position: absolute;
+	left: 50%;
+	top: -50px;
+	transform: translate(-50%, 0);
+	z-index: 9;
+	color: #fcaf09;
+	opacity: 1;
+	font-size: 23px;
+}
+
+.history-date.hide {
+	opacity: 0;
 }
