--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -807,11 +807,6 @@ nav {
 	color: #409eff;
 }
 
-.el-checkbox {
-	position: absolute;
-	right: 0;
-}
-
 .el-checkbox__input.is-checked .el-checkbox__inner,
 .el-checkbox__input.is-indeterminate .el-checkbox__inner {
 	background-color: transparent;
@@ -927,7 +922,7 @@ nav {
 	border-width: 0;
 }
 
-.curr-city__text {
+/* .curr-city__text {
 	font-size: 0.85rem;
 	white-space: normal;
 	line-height: 1;
@@ -935,7 +930,7 @@ nav {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-}
+} */
 
 .city-select .layer-search {
 	margin-bottom: 0;
