--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -804,30 +804,7 @@ nav {
 .layer-tree .el-tree-node.is-current>.el-tree-node__content,
 .el-tree-node:focus>.el-tree-node__content {
 	background-color: transparent;
-	color: #409eff;
-}
-
-.el-checkbox__input.is-checked .el-checkbox__inner,
-.el-checkbox__input.is-indeterminate .el-checkbox__inner {
-	background-color: transparent;
-	border: 0;
-}
-
-.custom-tree-node .icon-file {
-	margin-right: 2px;
-}
-
-.custom-tree-node .icon-file img {
-	vertical-align: middle;
-}
-
-.el-checkbox__inner {
-	width: 16px;
-	height: 16px;
-	background-color: transparent;
-	border: 0;
-	border-radius: 0;
-	background: url(../img/unchecked.png) no-repeat center center / 100% 100%;
+	color: #40a0ffcd;
 }
 
 .el-tree-node__content {
@@ -835,15 +812,24 @@ nav {
 	border-bottom: 1px solid rgba(255, 255, 255, 0.05);
 }
 
-.el-checkbox.is-checked .el-checkbox__inner {
-	background: url(../img/check.png) no-repeat center center / 100% 100%;
+.el-checkbox__inner {
+	background-color: transparent;
+	border-color: #DCDFE6;
 }
 
-.el-checkbox.is-checked .el-checkbox__inner::after,
-.is-indeterminate.el-checkbox__input .el-checkbox__inner::before {
-	content: "";
-	border: 0;
+.el-checkbox__input.is-checked .el-checkbox__inner, 
+.el-checkbox__input.is-indeterminate .el-checkbox__inner {
 	background-color: transparent;
+	border-color: #DCDFE6;
+}
+
+.el-checkbox__inner::after {
+	border-color: #DCDFE6;
+}
+
+.el-checkbox__inner:hover,
+.el-checkbox__input.is-focus .el-checkbox__inner {
+	border-color: #DCDFE6;
 }
 
 /* 空间分析 style */
